# ain453-project

./: .cursorrules  .gitignore  README.md
real/: .gitignore  Dockerfile  dependencies-py3.txt
real/launchers/: pf_localization.sh  rviz.sh
ros2_ws/src/log/: latest_version-check
ros2_ws/src/pf_localization/: generate_marker.py  package.xml  setup.cfg  setup.py
ros2_ws/src/pf_localization/config/: pf_params.yaml
ros2_ws/src/pf_localization/docs/: REPORT_DRAFT.md
ros2_ws/src/pf_localization/launch/: bringup.launch.py
ros2_ws/src/pf_localization/materials/scripts/: aruco.material
ros2_ws/src/pf_localization/pf_localization/: pf_node.py
ros2_ws/src/pf_localization/rviz/: pf_loc.rviz
ros2_ws/src/pf_localization/urdf/: duckiebot.gazebo  duckiebot.xacro  materials.xacro
ros2_ws/src/pf_localization/worlds/: room_tags.world
